--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,7 +111,7 @@
 		}
 
 		.icon > .label {
-			display: none;
+			/*display: none;*/
 		}
 
 /* Wrapper */
@@ -666,7 +666,7 @@
 					}
 
 				#header nav a span {
-					display: none;
+					/*display: none;*/
 				}
 
 /* Footer */
